--- a/educacao.html
+++ b/educacao.html
@@ -8,6 +8,34 @@
     <link rel="stylesheet" href="CSS/educacao.css">
 </head>
 <body>
-    
+    <header>
+        <div class="container">
+            <div class="logo">
+                logo
+            </div>
+
+            <div class="páginas">
+                <ul class="links">
+                    <li>IA na programação</li>
+                    <li>IA na educação</li>
+                    <li>IA em jogos</li>
+                </ul>
+            </div>
+
+            <div class="logo">
+                <div class="gpt">
+                    <button id="conectarBtn">ChatGPT</button>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
