--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
             <div class="logo">
                 <div class="gpt">
-                    <img src="" alt=""> ChatGPT
+                    <button id="conectarBtn">ChatGPT</button>
                 </div>
             </div>
         </div>
