--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IA no Cotidiano</title>
+    <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
@@ -30,7 +31,17 @@
     </header>
 
     <main>
+        <section class="noticias">
+            <div class="texto_noticias">Lorem ipsum dolor sit amet consectetur adipisicing elit. In eos aperiam fugiat dolores quisquam reprehenderit harum tenetur? Voluptatibus, officia quia.</div>
+        </section>
 
+        <section class="noticias">
+            <div class="texto_noticias">Lorem ipsum dolor sit amet consectetur adipisicing elit. In eos aperiam fugiat dolores quisquam reprehenderit harum tenetur? Voluptatibus, officia quia.</div>
+        </section>
+
+        <section class="noticias">
+            <div class="texto_noticias">Lorem ipsum dolor sit amet consectetur adipisicing elit. In eos aperiam fugiat dolores quisquam reprehenderit harum tenetur? Voluptatibus, officia quia.</div>
+        </section>
     </main>
 
     <footer>
