--- a/programacao.html
+++ b/programacao.html
@@ -11,15 +11,15 @@
 <body>
     <header>
         <div class="container">
-            <div class="logo">
-                logo
-            </div>
+            <div class="logo" >
+                <a href="index.html"><img src="ims/logo.png" alt="" style="width: 12%; height: auto; border-radius: 50%;"></a> 
+             </div>
 
             <div class="páginas">
                 <ul class="links">
-                    <li>IA na programação</li>
-                    <li>IA na educação</li>
-                    <li>IA em jogos</li>
+                    <li> <a href="programacao.html">IA na programação</a></li>
+                    <li> <a href="educacao.html">IA na educação</a></li>
+                    <li> <a href="Jogos.html">IA em jogos</a></li>
                 </ul>
             </div>
 
