atualização botão e redução do css

--- a/Jogos.html
+++ b/Jogos.html
@@ -12,7 +12,7 @@
     <header>
         <div class="container">
             <div class="logo" >
-                <a href="index.html"><img src="ims/logo.png" alt="" style="width: 12%; height: auto; border-radius: 50%;"></a> 
+                <a href="index.html"><img src="ims/logo.png" alt="" style=" left: 5%;"></a> 
              </div>
 
             <div class="páginas">
@@ -25,7 +25,9 @@
 
             <div class="logo">
                 <div class="gpt">
-                    <button id="conectarBtn">botão<img src="img/ChatGptLogo.webp" alt="" class="gptlogo"></button>
+                    <button id="conectarBtn">
+                        <img src="ims/chatgpt.png" alt="" class="gptlogo">
+                    </button>
                 </div>
             </div>
         </div>
