--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <header>
         <div class="container">
             <div class="logo" >
-                <a href="index.html"><img src="ims/logo.png" alt="" style="width: 12%; height: auto; border-radius: 50%;"></a> 
-            </div>
+                <a href="index.html"><img src="ims/logo.png" alt="" style=" left: 5%;"></a> 
+             </div>
 
             <div class="páginas">
                 <ul class="links">
@@ -24,7 +24,9 @@
 
             <div class="logo">
                 <div class="gpt">
-                    <button id="conectarBtn">ChatGPT</button>
+                    <button id="conectarBtn">
+                        <img src="ims/chatgpt.png" alt="" class="gptlogo">
+                    </button>
                 </div>
             </div>
         </div>
