--- a/Jogos.html
+++ b/Jogos.html
@@ -12,7 +12,7 @@
     <header>
         <div class="container">
             <div class="logo" >
-                <a href="index.html"><img src="ims/logo.png" alt="" style=" left: 5%;"></a> 
+                <a href="index.html"><img src="img/logo.png" alt="" style=" left: 5%;"></a> 
              </div>
 
             <div class="páginas">
@@ -26,7 +26,7 @@
             <div class="logo">
                 <div class="gpt">
                     <button id="conectarBtn">
-                        <img src="ims/chatgpt.png" alt="" class="gptlogo">
+                        <img src="img/chatgpt.png" alt="" class="gptlogo">
                     </button>
                 </div>
             </div>
