--- a/educacao.html
+++ b/educacao.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IA na educação</title>
+    <title>IA no Cotidiano</title>
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/educacao.css">
@@ -26,7 +26,9 @@
             <div class="logo">
                 <div class="gpt">
                     <button id="conectarBtn">
-                        <img src="img/chatgpt.png" alt="" class="gptlogo">
+                        <a href="https://chat.openai.com" target="_blank">
+                            <img src="img/chatgpt.png" alt="" class="gptlogo">
+                        </a>
                     </button>
                 </div>
             </div>
@@ -34,11 +36,23 @@
     </header>
 
     <main>
-
+        <div class=.noticias>
+            <div class="flexbox1">
+                A inteligência artificial está revolucionando a educação ao personalizar o aprendizado, oferecendo conteúdos e feedback adaptados às necessidades individuais dos alunos. Ferramentas como tutores virtuais e plataformas de ensino adaptativo identificam áreas de dificuldade e oferecem suporte direcionado, tornando a aprendizagem mais eficiente e acessível. Além disso, a IA automatiza tarefas administrativas, como correção de provas e gerenciamento de notas, permitindo que os educadores se concentrem mais no ensino. A análise de dados também fornece insights valiosos sobre o progresso dos alunos e a eficácia dos métodos de ensino, enquanto ferramentas de acessibilidade promovem uma experiência educacional mais equitativa. Dessa forma, a IA enriquece a experiência de aprendizagem, tornando-a mais personalizada, envolvente e eficiente.
+            </div>
+            <div class="flexbox2">
+                Ao usar algoritmos de aprendizado de máquina, a IA tem a capacidade de se adaptar às necessidades individuais dos estudantes,
+                proporcionando experiências de aprendizagem personalizadas que atendem às suas necessidades exclusivas.
+            </div>
+        </div>
     </main>
 
     <footer>
-
+        <div class="container">
+            
+        </div>
     </footer>
+
 </body>
 </html>
+s
