--- a/index.html
+++ b/index.html
@@ -25,12 +25,16 @@
             <div class="logo">
                 <div class="gpt">
                     <button id="conectarBtn">
-                        <img src="img/chatgpt.png" alt="" class="gptlogo">
+                        <a href="https://chat.openai.com" target="_blank">
+                            <img src="img/chatgpt.png" alt="" class="gptlogo">
+                        </a>
                     </button>
                 </div>
             </div>
         </div>
     </header>
+
+    
 
     <main>
         <section class="noticias">
