--- a/programacao.html
+++ b/programacao.html
@@ -33,7 +33,41 @@
         </div>
     </header>
     <main>
+        <section class="noticias">
+            <img src="./img/copilot.jpeg" alt="imagem do copilot">
+            <div class="texto_noticias">Ferramentas como GitHub Copilot, alimentado pelo modelo OpenAI Codex, estão mudando a maneira como os desenvolvedores escrevem código. Essas ferramentas sugerem blocos de código inteiros com base em descrições simples, reduzindo o tempo gasto em tarefas repetitivas e permitindo que os programadores se concentrem em aspectos mais criativos e complexos do desenvolvimento de software. A geração automática de código pode aumentar significativamente a produtividade e a eficiência.</div>
+            <a href="https://copilot.microsoft.com/" target="_blank">Acessar noticia</a>
+        </section>
 
+        <section class="noticias">
+            <img src="./img/blog-1-1280x855.jpg" alt="Imagem ferramente DeepCode">
+            <div class="texto_noticias">A Inteligência Artificial está revolucionando a depuração de código ao identificar e corrigir erros de maneira mais rápida e precisa. Ferramentas como DeepCode e Codota utilizam IA para analisar o código em tempo real, sugerindo correções e melhorias baseadas em padrões aprendidos a partir de grandes bases de código. Isso não só acelera o processo de desenvolvimento, mas também ajuda a manter um código mais limpo e eficiente.</div>
+            <a href="https://www.mazza.tech/7-dicas-para-usar-a-ia-na-programacao/" target="_blank">Acessar noticia</a>
+        </section>
+
+        <section class="noticias">
+            <img src="./img/using-computer-writing-700x467.jpg" alt="Imagem Machine learning">
+            <div class="texto_noticias">A IA está sendo usada para criar interfaces de usuário mais personalizadas e intuitivas. Algoritmos de machine learning analisam o comportamento do usuário para ajustar automaticamente a interface de acordo com suas preferências e necessidades. Isso resulta em uma experiência de usuário mais satisfatória e adaptativa, melhorando a interação e a retenção dos usuários.</div>
+            <a href="https://tecnoblog.net/responde/machine-learning-ia-o-que-e/" target="_blank">Acessar noticia</a>
+        </section>
+
+        <section class="noticias">
+            <img src="./img/GettyImages-1398247435.webp" alt="Imagem manutencao">
+            <div class="texto_noticias">A manutenção de software é uma tarefa contínua que pode ser significativamente facilitada pela IA. Ferramentas de análise de código baseadas em IA podem prever quais partes do código são mais suscetíveis a falhas e precisam de manutenção. Além disso, podem sugerir refatorações para melhorar a estrutura do código e prevenir problemas futuros. Isso ajuda a prolongar a vida útil do software e a reduzir os custos de manutenção a longo prazo. </div>
+            <a href="https://www.cnnbrasil.com.br/economia/macroeconomia/como-a-inteligencia-artificial-pode-ajudar-a-conter-mudancas-climaticas/" target="_blank">Acessar noticia</a>
+        </section>
+
+        <section class="noticias">
+            <img src="./img/leadspace.jpeg" alt="Imagem Algoritmos">
+            <div class="texto_noticias">A otimização de algoritmos é outra área onde a IA está tendo um impacto significativo. Algoritmos de aprendizado de máquina podem ser utilizados para ajustar parâmetros de algoritmos existentes, tornando-os mais eficientes em termos de tempo e recursos computacionais. Isso é particularmente útil em áreas como otimização de rotas, processamento de imagens e análise de dados, onde a eficiência é crucial.</div>
+            <a href="https://www.ibm.com/br-pt/topics/machine-learning-algorithms" target="_blank">Acessar noticia</a>
+        </section>
+
+        <section class="noticias">
+            <img src="./img/download.jpeg" alt="">
+            <div class="texto_noticias">A IA está desempenhando um papel crucial na segurança cibernética, ajudando a identificar vulnerabilidades e ataques em tempo real. Sistemas baseados em IA podem analisar padrões de tráfego de rede, detectar atividades anômalas e responder a ameaças de maneira proativa. Para os programadores, isso significa integrar ferramentas de segurança alimentadas por IA diretamente em seus pipelines de desenvolvimento, garantindo que o software seja mais seguro desde o início.</div>
+            <a href="https://www.terra.com.br/noticias/brasil/politica/como-kamala-harris-pode-mudar-o-futuro-da-ia,47df875b75125e9fd69b679bb61f155bdos6upr1.html" target="_blank">Acessar noticia</a>
+        </section>
     </main>
 
     <footer>
