--- a/Jogos.html
+++ b/Jogos.html
@@ -63,7 +63,10 @@
     </main>
 
     <footer>
-
+        <div class="container">
+            <p>CoderHouse Grupo &copy;</p>
+        </div>
     </footer>
+    
 </body>
 </html>
