--- a/educacao.html
+++ b/educacao.html
@@ -59,10 +59,9 @@
 
     <footer>
         <div class="container">
-            
+            <p>CoderHouse Grupo &copy;</p>
         </div>
     </footer>
 
 </body>
 </html>
-s
