--- a/programacao.html
+++ b/programacao.html
@@ -71,7 +71,9 @@
     </main>
 
     <footer>
-
+        <div class="container">
+            <p>CoderHouse Grupo &copy;</p>
+        </div>
     </footer>
 </body>
 </html>
