--- a/index.html
+++ b/index.html
@@ -73,8 +73,10 @@
             <a href="https://www.terra.com.br/noticias/brasil/politica/como-kamala-harris-pode-mudar-o-futuro-da-ia,47df875b75125e9fd69b679bb61f155bdos6upr1.html" target="_blank">Acessar noticia</a>
         </section>
 
-    <footer>
-
-    </footer>
+        <footer>
+            <div class="container">
+                <p>CoderHouse Grupo &copy;</p>
+            </div>
+        </footer>
 </body>
 </html>
